--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-Hello World
+<html>
+<head>
+    <meta charset="utf-8"></meta>
+    <title>Zoe's Personal Site</title>
+</head>
+<body>
+    <img src="https://pbs.twimg.com/profile_images/489174300386025472/ovHwcTJF_400x400.jpeg"></img>
+    <h1>Zoe Monreal</h1>
+    <p>
+        <em>Lorem ipsum.....</em>
+        <i>Lorem ipsum.....</i>
+    </p>
+    <hr>
+</body>
+</html>
