--- a/index.html
+++ b/index.html
@@ -52,6 +52,6 @@
       <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
       <a class="footer-link" href="https://twitter.com/">Twitter</a>
       <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
-      <p>© 2021 Zoe Monreal.</p>
+      <p class="copyright">© 2021 Zoe Monreal.</p>
     </div>
 </html>
